# fin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: e2e-manual.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-overlays/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-auto-run-panel/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-UI-SPEC.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: e2e_blueprint.sh
src/: cli.rs  error.rs  main.rs  sessions.rs  worktree.rs
src/agent/: agent_loop.rs  compaction.rs  handoff.rs  mod.rs  prompt.rs  state.rs  steering.rs
src/agents/: collector_io.rs  defaults.rs  definition.rs  delegate.rs  mod.rs  registry.rs  tier.rs
src/config/: auth.rs  mod.rs  oauth.rs  paths.rs  preferences.rs
src/db/: mod.rs  planning.rs  project.rs  schema.rs  session.rs
src/extensions/: api.rs  mod.rs  registry.rs
src/extensions/builtin/: context7.rs  mod.rs  web_search.rs
src/io/: agent_io.rs  channel_io.rs  headless.rs  http.rs  mcp.rs  mod.rs  print.rs  print_io.rs  rpc.rs
src/llm/: anthropic.rs  bedrock.rs  google.rs  mod.rs  models.rs  ollama.rs  openai.rs  provider.rs  stream.rs  types.rs  vertex.rs
src/onboarding/: mod.rs
src/skills/: mod.rs
src/tools/: bash.rs  edit.rs  git.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/tui/: app.rs  mod.rs  tui_io.rs  widgets.rs
src/workflow/: auto_loop.rs  commands.rs  continue_protocol.rs  crud.rs  dispatch.rs  git.rs  markdown.rs  mod.rs  prompts.rs  state.rs
src/workflow/phases/: advance.rs  architect.rs  build.rs  define.rs  explore.rs  mod.rs  seal_section.rs  validate.rs
tests/: integration_test.rs
