[package]
name = "fin"
version = "0.1.0"
edition = "2024"
description = "AI coding agent — one command, walk away, come back to a built project"
license = "MIT"
authors = ["Jeremy McSpadden <jeremy@fluxlabs.net>"]
repository = "https://github.com/fluxlabs/fin"
rust-version = "1.85"

[[bin]]
name = "fin"
path = "src/main.rs"

[features]
default = ["tui", "http"]
tui = ["dep:ratatui", "dep:crossterm"]
http = ["dep:axum", "dep:tower", "dep:tower-http"]
mcp = []
browser = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"] }

# SSE parsing (for LLM streaming)
eventsource-stream = "0.2"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"

# TUI (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Markdown rendering
pulldown-cmark = "0.12"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# HTTP server (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File search (ripgrep engine)
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"

# Glob / file matching
globset = "0.4"
ignore = "0.4"

# Git (vendored OpenSSL + libssh2 for cross-compilation)
git2 = { version = "0.19", features = ["vendored-openssl", "vendored-libgit2"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Config
dirs = "6"
toml = "0.8"

# YAML parsing (agent definition frontmatter)
serde_yaml = "0.9"

# Auth / keyring
keyring = "3"
rpassword = "7"

# Token counting (BPE, prebuilt OpenAI encodings — no runtime downloads)
bpe-openai = "0.3"

# Async trait
async-trait = "0.1"

# Cancellation
tokio-util = { version = "0.7", features = ["rt"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Pin utilities
pin-project-lite = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for best optimization
strip = true        # Strip debug symbols
panic = "abort"     # Smaller binary, no unwind tables
